--- a/springboot-shiro/src/main/resources/application.yml
+++ b/springboot-shiro/src/main/resources/application.yml
@@ -1,21 +1,23 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/test
-    data-username: root
-    password: root
-    driver-class-name: com.mysql.jdbc.Driver
+    datasource:
+      url: jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8
+      username: root
+      password: root
+      #schema: database/import.sql
+      #sql-script-encoding: utf-8
+      driver-class-name: com.mysql.jdbc.Driver
 
-  jpa:
-    database: mysql
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-      naming:
-        strategy: org.hibernate.cfg.DefaultComponentSafeNamingStrategy
-    properties:
+    jpa:
+      database: MYSQL
+      show-sql: true
       hibernate:
-       dialect: org.hibernate.dialect.MySQL5Dialect
+        ddl-auto: update
+        naming:
+          strategy: org.hibernate.cfg.ImprovedNamingStrategy
+      properties:
+         hibernate:
+            dialect: org.hibernate.dialect.MySQL5Dialect
 
-thymeleaf:
-  cache: false
-  mode: LEGACYHTML5
+    thymeleaf:
+       cache: false
+       mode: LEGACYHTML5
