--- a/springboot-shiro/src/main/resources/application.yml
+++ b/springboot-shiro/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
       properties:
          hibernate:
             dialect: org.hibernate.dialect.MySQL5Dialect
+      open-in-view: true
 
     thymeleaf:
        cache: false
